--- a/system_huellitas/views/admin/scrud_cupones.html
+++ b/system_huellitas/views/admin/scrud_cupones.html
@@ -131,37 +131,38 @@
 <!--Modal para el boton de agregar cupon-->
 <div class="modal" id="agCupon" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
+    <form>
       <div class="modal-content">
-          <div class="modal-header bg-orange-color">
-              <div class="container text-center">
-                  <h1 class="modal-title fs-5 text-white" id="exampleModalLabel">Agregar</h1>
-              </div>
-              <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
-                  aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-              <div class="row">
-                  <div class="col-sm-12 col-md-6">
-                      <p class="fs-8 btn-orange-color">Código</p>
-                      <input type="text" class="form-control" placeholder="#####" aria-label="codigo">
-                  </div>
-                  <div class="col-sm-12 col-md-6">
-                      <p class="fs-8 btn-orange-color">Porcentaje</p>
-                      <input type="text" class="form-control" placeholder="100%" aria-label="porcentaje">
-                  </div>
-              </div>
-              <br>
-              <div class="form-check form-switch">
-                  <label class="form-check-label" for="flexSwitchCheckChecked">Cupón habilitado</label>
-                  <input class="form-check-input bg-orange-color" type="checkbox" role="switch"
-                      id="flexSwitchCheckChecked" checked>
-              </div>
-          </div>
+        <div class="modal-header bg-orange-color">
           <div class="container text-center">
-              <button type="button" class="btn btn-orange-color text-white">Agregar</button>
+            <h1 class="modal-title fs-5 text-white" id="exampleModalLabel">Agregar</h1>
+          </div>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="row">
+            <div class="col-sm-12 col-md-6">
+              <p class="fs-8 btn-orange-color">Código</p>
+              <input type="text" class="form-control" placeholder="#####" aria-label="codigo">
+            </div>
+            <div class="col-sm-12 col-md-6">
+              <p class="fs-8 btn-orange-color">Porcentaje</p>
+              <input type="text" class="form-control" placeholder="100%" aria-label="porcentaje">
+            </div>
           </div>
           <br>
+          <div class="form-check form-switch">
+            <label class="form-check-label" for="flexSwitchCheckChecked">Cupón habilitado</label>
+            <input class="form-check-input bg-orange-color" type="checkbox" role="switch" id="flexSwitchCheckChecked"
+              checked>
+          </div>
+        </div>
+        <div class="container text-center">
+          <button type="button" class="btn btn-orange-color text-white">Agregar</button>
+        </div>
+        <br>
       </div>
+    </form>
   </div>
 </div>
 
@@ -171,36 +172,38 @@
 <!--Modal para el boton de actualizar cupon-->
 <div class="modal " id="actCupon" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header bg-orange-color">
-        <div class="container text-center">
-          <h1 class="modal-title fs-5 text-white" id="exampleModalLabel">Actualizar</h1>
+    <form>
+      <div class="modal-content">
+        <div class="modal-header bg-orange-color">
+          <div class="container text-center">
+            <h1 class="modal-title fs-5 text-white" id="exampleModalLabel">Actualizar</h1>
+          </div>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <div class="row">
-          <div class="col-sm-12 col-md-6">
-            <p class="fs-8 btn-orange-color"> Código</p>
-            <input type="text" class="form-control" placeholder="#####" aria-label="codigo">
+        <div class="modal-body">
+          <div class="row">
+            <div class="col-sm-12 col-md-6">
+              <p class="fs-8 btn-orange-color"> Código</p>
+              <input type="text" class="form-control" placeholder="#####" aria-label="codigo">
+            </div>
+            <div class="col-sm-12 col-md-6">
+              <p class="fs-8 btn-orange-color"> Porcentaje</p>
+              <input type="text" class="form-control" placeholder="100%" aria-label="porcentaje">
+            </div>
           </div>
-          <div class="col-sm-12 col-md-6">
-            <p class="fs-8 btn-orange-color"> Porcentaje</p>
-            <input type="text" class="form-control" placeholder="100%" aria-label="porcentaje">
+          <br>
+          <div class="form-check form-switch">
+            <label class="form-check-label" for="flexSwitchCheckChecked">Cupón habilitado</label>
+            <input class="form-check-input bg-orange-color" type="checkbox" role="switch" id="flexSwitchCheckChecked"
+              checked>
           </div>
+        </div>
+        <div class="container text-center">
+          <button type="button" class="btn btn-orange-color text-white">Actualizar</button>
         </div>
         <br>
-        <div class="form-check form-switch">
-          <label class="form-check-label" for="flexSwitchCheckChecked">Cupón habilitado</label>
-          <input class="form-check-input bg-orange-color" type="checkbox" role="switch" id="flexSwitchCheckChecked"
-            checked>
-        </div>
       </div>
-      <div class="container text-center">
-        <button type="button" class="btn btn-orange-color text-white">Actualizar</button>
-      </div>
-      <br>
-    </div>
+    </form>
   </div>
 </div>
 
