--- a/system_huellitas/resources/scss/main.css
+++ b/system_huellitas/resources/scss/main.css
@@ -41,6 +41,7 @@
   --bs-skin-color: rgb(250, 240, 202);
   --bs-red-color: rgb(249, 87, 56);
   --bs-yellow-color: rgb(244, 211, 94);
+  --bs-gray-color: rgb(246, 243, 243);
   --bs-primary-rgb: 13, 110, 253;
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 25, 135, 84;
@@ -53,6 +54,7 @@
   --bs-skin-color-rgb: 250, 240, 202;
   --bs-red-color-rgb: 249, 87, 56;
   --bs-yellow-color-rgb: 244, 211, 94;
+  --bs-gray-color-rgb: 246, 243, 243;
   --bs-primary-text-emphasis: #052c65;
   --bs-secondary-text-emphasis: #2b2f32;
   --bs-success-text-emphasis: #0a3622;
@@ -2177,6 +2179,7 @@ progress {
   margin-inline-end: 0.75rem;
   color: var(--bs-body-color);
   background-color: var(--bs-tertiary-bg);
+  background-image: var(--bs-gradient);
   pointer-events: none;
   border-color: inherit;
   border-style: solid;
@@ -2393,15 +2396,15 @@ textarea.form-control-lg {
   border-color: #0d6efd;
 }
 .form-check-input:checked[type=checkbox] {
-  --bs-form-check-bg-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 3 3 6-6'/%3e%3c/svg%3e");
+  --bs-form-check-bg-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 3 3 6-6'/%3e%3c/svg%3e"), var(--bs-gradient);
 }
 .form-check-input:checked[type=radio] {
-  --bs-form-check-bg-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23fff'/%3e%3c/svg%3e");
+  --bs-form-check-bg-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23fff'/%3e%3c/svg%3e"), var(--bs-gradient);
 }
 .form-check-input[type=checkbox]:indeterminate {
   background-color: #0d6efd;
   border-color: #0d6efd;
-  --bs-form-check-bg-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
+  --bs-form-check-bg-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e"), var(--bs-gradient);
 }
 .form-check-input:disabled {
   pointer-events: none;
@@ -2435,7 +2438,7 @@ textarea.form-control-lg {
 }
 .form-switch .form-check-input:checked {
   background-position: right center;
-  --bs-form-switch-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e");
+  --bs-form-switch-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e"), var(--bs-gradient);
 }
 .form-switch.form-check-reverse {
   padding-right: 2.5em;
@@ -2494,6 +2497,7 @@ textarea.form-control-lg {
   -webkit-appearance: none;
           appearance: none;
   background-color: #0d6efd;
+  background-image: var(--bs-gradient);
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2507,6 +2511,7 @@ textarea.form-control-lg {
 }
 .form-range::-webkit-slider-thumb:active {
   background-color: #b6d4fe;
+  background-image: var(--bs-gradient);
 }
 .form-range::-webkit-slider-runnable-track {
   width: 100%;
@@ -2523,6 +2528,7 @@ textarea.form-control-lg {
   -moz-appearance: none;
        appearance: none;
   background-color: #0d6efd;
+  background-image: var(--bs-gradient);
   border: 0;
   border-radius: 1rem;
   -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2536,6 +2542,7 @@ textarea.form-control-lg {
 }
 .form-range::-moz-range-thumb:active {
   background-color: #b6d4fe;
+  background-image: var(--bs-gradient);
 }
 .form-range::-moz-range-track {
   width: 100%;
@@ -2969,6 +2976,7 @@ textarea.form-control-lg {
   border: var(--bs-btn-border-width) solid var(--bs-btn-border-color);
   border-radius: var(--bs-btn-border-radius);
   background-color: var(--bs-btn-bg);
+  background-image: var(--bs-gradient);
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -2989,6 +2997,7 @@ textarea.form-control-lg {
 .btn:focus-visible {
   color: var(--bs-btn-hover-color);
   background-color: var(--bs-btn-hover-bg);
+  background-image: var(--bs-gradient);
   border-color: var(--bs-btn-hover-border-color);
   outline: 0;
   box-shadow: var(--bs-btn-focus-box-shadow);
@@ -3001,6 +3010,7 @@ textarea.form-control-lg {
 .btn-check:checked + .btn, :not(.btn-check) + .btn:active, .btn:first-child:active, .btn.active, .btn.show {
   color: var(--bs-btn-active-color);
   background-color: var(--bs-btn-active-bg);
+  background-image: none;
   border-color: var(--bs-btn-active-border-color);
 }
 .btn-check:checked + .btn:focus-visible, :not(.btn-check) + .btn:active:focus-visible, .btn:first-child:active:focus-visible, .btn.active:focus-visible, .btn.show:focus-visible {
@@ -3010,6 +3020,7 @@ textarea.form-control-lg {
   color: var(--bs-btn-disabled-color);
   pointer-events: none;
   background-color: var(--bs-btn-disabled-bg);
+  background-image: none;
   border-color: var(--bs-btn-disabled-border-color);
   opacity: var(--bs-btn-disabled-opacity);
 }
@@ -3218,6 +3229,23 @@ textarea.form-control-lg {
   --bs-btn-disabled-border-color: rgb(244, 211, 94);
 }
 
+.btn-gray-color {
+  --bs-btn-color: #000;
+  --bs-btn-bg: rgb(246, 243, 243);
+  --bs-btn-border-color: rgb(246, 243, 243);
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #f7f5f5;
+  --bs-btn-hover-border-color: #f7f4f4;
+  --bs-btn-focus-shadow-rgb: 209, 207, 207;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #f8f5f5;
+  --bs-btn-active-border-color: #f7f4f4;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #000;
+  --bs-btn-disabled-bg: rgb(246, 243, 243);
+  --bs-btn-disabled-border-color: rgb(246, 243, 243);
+}
+
 .btn-outline-primary {
   --bs-btn-color: #0d6efd;
   --bs-btn-border-color: #0d6efd;
@@ -3422,6 +3450,23 @@ textarea.form-control-lg {
   --bs-gradient: none;
 }
 
+.btn-outline-gray-color {
+  --bs-btn-color: rgb(246, 243, 243);
+  --bs-btn-border-color: rgb(246, 243, 243);
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: rgb(246, 243, 243);
+  --bs-btn-hover-border-color: rgb(246, 243, 243);
+  --bs-btn-focus-shadow-rgb: 246, 243, 243;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: rgb(246, 243, 243);
+  --bs-btn-active-border-color: rgb(246, 243, 243);
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: rgb(246, 243, 243);
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: rgb(246, 243, 243);
+  --bs-gradient: none;
+}
+
 .btn-link {
   --bs-btn-font-weight: 400;
   --bs-btn-color: var(--bs-link-color);
@@ -3436,6 +3481,7 @@ textarea.form-control-lg {
   --bs-btn-box-shadow: 0 0 0 #000;
   --bs-btn-focus-shadow-rgb: 49, 132, 253;
   text-decoration: underline;
+  background-image: none;
 }
 .btn-link:focus-visible {
   color: var(--bs-btn-color);
@@ -3766,16 +3812,19 @@ textarea.form-control-lg {
 .dropdown-item:hover, .dropdown-item:focus {
   color: var(--bs-dropdown-link-hover-color);
   background-color: var(--bs-dropdown-link-hover-bg);
+  background-image: var(--bs-gradient);
 }
 .dropdown-item.active, .dropdown-item:active {
   color: var(--bs-dropdown-link-active-color);
   text-decoration: none;
   background-color: var(--bs-dropdown-link-active-bg);
+  background-image: var(--bs-gradient);
 }
 .dropdown-item.disabled, .dropdown-item:disabled {
   color: var(--bs-dropdown-link-disabled-color);
   pointer-events: none;
   background-color: transparent;
+  background-image: none;
 }
 
 .dropdown-menu.show {
@@ -3999,6 +4048,7 @@ textarea.form-control-lg {
 .nav-pills .show > .nav-link {
   color: var(--bs-nav-pills-link-active-color);
   background-color: var(--bs-nav-pills-link-active-bg);
+  background-image: var(--bs-gradient);
 }
 
 .nav-underline {
@@ -4074,6 +4124,7 @@ textarea.form-control-lg {
   align-items: center;
   justify-content: space-between;
   padding: var(--bs-navbar-padding-y) var(--bs-navbar-padding-x);
+  background-image: var(--bs-gradient);
 }
 .navbar > .container,
 .navbar > .container-fluid,
@@ -4892,6 +4943,7 @@ textarea.form-control-lg {
   z-index: 3;
   color: var(--bs-pagination-active-color);
   background-color: var(--bs-pagination-active-bg);
+  background-image: var(--bs-gradient);
   border-color: var(--bs-pagination-active-border-color);
 }
 .page-link.disabled, .disabled > .page-link {
@@ -4944,6 +4996,7 @@ textarea.form-control-lg {
   white-space: nowrap;
   vertical-align: baseline;
   border-radius: var(--bs-badge-border-radius);
+  background-image: var(--bs-gradient);
 }
 .badge:empty {
   display: none;
@@ -5075,6 +5128,13 @@ textarea.form-control-lg {
   --bs-alert-bg: var(--bs-yellow-color-bg-subtle);
   --bs-alert-border-color: var(--bs-yellow-color-border-subtle);
   --bs-alert-link-color: var(--bs-yellow-color-text-emphasis);
+}
+
+.alert-gray-color {
+  --bs-alert-color: var(--bs-gray-color-text-emphasis);
+  --bs-alert-bg: var(--bs-gray-color-bg-subtle);
+  --bs-alert-border-color: var(--bs-gray-color-border-subtle);
+  --bs-alert-link-color: var(--bs-gray-color-text-emphasis);
 }
 
 @keyframes progress-bar-stripes {
@@ -5532,6 +5592,19 @@ textarea.form-control-lg {
   --bs-list-group-active-color: var(--bs-yellow-color-bg-subtle);
   --bs-list-group-active-bg: var(--bs-yellow-color-text-emphasis);
   --bs-list-group-active-border-color: var(--bs-yellow-color-text-emphasis);
+}
+
+.list-group-item-gray-color {
+  --bs-list-group-color: var(--bs-gray-color-text-emphasis);
+  --bs-list-group-bg: var(--bs-gray-color-bg-subtle);
+  --bs-list-group-border-color: var(--bs-gray-color-border-subtle);
+  --bs-list-group-action-hover-color: var(--bs-emphasis-color);
+  --bs-list-group-action-hover-bg: var(--bs-gray-color-border-subtle);
+  --bs-list-group-action-active-color: var(--bs-emphasis-color);
+  --bs-list-group-action-active-bg: var(--bs-gray-color-border-subtle);
+  --bs-list-group-active-color: var(--bs-gray-color-bg-subtle);
+  --bs-list-group-active-bg: var(--bs-gray-color-text-emphasis);
+  --bs-list-group-active-border-color: var(--bs-gray-color-text-emphasis);
 }
 
 .btn-close {
@@ -6306,10 +6379,12 @@ textarea.form-control-lg {
 
 .carousel-control-prev {
   left: 0;
+  background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.001));
 }
 
 .carousel-control-next {
   right: 0;
+  background-image: linear-gradient(270deg, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.001));
 }
 
 .carousel-control-prev-icon,
@@ -7090,6 +7165,11 @@ textarea.form-control-lg {
   background-color: RGBA(var(--bs-yellow-color-rgb), var(--bs-bg-opacity, 1)) !important;
 }
 
+.text-bg-gray-color {
+  color: #000 !important;
+  background-color: RGBA(var(--bs-gray-color-rgb), var(--bs-bg-opacity, 1)) !important;
+}
+
 .link-primary {
   color: RGBA(var(--bs-primary-rgb), var(--bs-link-opacity, 1)) !important;
   text-decoration-color: RGBA(var(--bs-primary-rgb), var(--bs-link-underline-opacity, 1)) !important;
@@ -7196,6 +7276,15 @@ textarea.form-control-lg {
 .link-yellow-color:hover, .link-yellow-color:focus {
   color: RGBA(246, 220, 126, var(--bs-link-opacity, 1)) !important;
   text-decoration-color: RGBA(246, 220, 126, var(--bs-link-underline-opacity, 1)) !important;
+}
+
+.link-gray-color {
+  color: RGBA(var(--bs-gray-color-rgb), var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(var(--bs-gray-color-rgb), var(--bs-link-underline-opacity, 1)) !important;
+}
+.link-gray-color:hover, .link-gray-color:focus {
+  color: RGBA(248, 245, 245, var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(248, 245, 245, var(--bs-link-underline-opacity, 1)) !important;
 }
 
 .link-body-emphasis {
@@ -7650,6 +7739,10 @@ textarea.form-control-lg {
   --bs-focus-ring-color: rgba(var(--bs-yellow-color-rgb), var(--bs-focus-ring-opacity));
 }
 
+.focus-ring-gray-color {
+  --bs-focus-ring-color: rgba(var(--bs-gray-color-rgb), var(--bs-focus-ring-opacity));
+}
+
 .position-static {
   position: static !important;
 }
@@ -7828,6 +7921,11 @@ textarea.form-control-lg {
 .border-yellow-color {
   --bs-border-opacity: 1;
   border-color: rgba(var(--bs-yellow-color-rgb), var(--bs-border-opacity)) !important;
+}
+
+.border-gray-color {
+  --bs-border-opacity: 1;
+  border-color: rgba(var(--bs-gray-color-rgb), var(--bs-border-opacity)) !important;
 }
 
 .border-black {
@@ -8807,6 +8905,11 @@ textarea.form-control-lg {
   color: rgba(var(--bs-yellow-color-rgb), var(--bs-text-opacity)) !important;
 }
 
+.text-gray-color {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-gray-color-rgb), var(--bs-text-opacity)) !important;
+}
+
 .text-black {
   --bs-text-opacity: 1;
   color: rgba(var(--bs-black-rgb), var(--bs-text-opacity)) !important;
@@ -9029,6 +9132,11 @@ textarea.form-control-lg {
   text-decoration-color: rgba(var(--bs-yellow-color-rgb), var(--bs-link-underline-opacity)) !important;
 }
 
+.link-underline-gray-color {
+  --bs-link-underline-opacity: 1;
+  text-decoration-color: rgba(var(--bs-gray-color-rgb), var(--bs-link-underline-opacity)) !important;
+}
+
 .link-underline {
   --bs-link-underline-opacity: 1;
   text-decoration-color: rgba(var(--bs-link-color-rgb), var(--bs-link-underline-opacity, 1)) !important;
@@ -9140,6 +9248,11 @@ textarea.form-control-lg {
 .bg-yellow-color {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-yellow-color-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-gray-color {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-gray-color-rgb), var(--bs-bg-opacity)) !important;
 }
 
 .bg-black {
