--- a/system_huellitas/views/admin/menu_productos.html
+++ b/system_huellitas/views/admin/menu_productos.html
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-    <div id="navbar"></div>
     <header>
+        <div id="navbar"></div>
         <div class="container p-2 mt-5">
             <div class="row mt-5">
                 <div class="col-auto">
@@ -30,18 +30,18 @@
     </header>
     <main>
         <div class="container d-flex justify-content-center align-items-center p-4">
-            <div class="row gx-5">
-                <div class="col ">
+            <div class="row gx-5 gy-5">
+                <div class="col m">
                     <img class="mb-4" src="../../resources/img/png/dog_products.png" width="300px">
                     <div>
-                        <a href="../../views/admin/scrud_productos.html"
+                        <a href="../../views/admin/scrud_productos_perros.html"
                             class="btn btn-red-color btn-lg text-light rounded-5 d-grid gap-2">Perros</a>
                     </div>
                 </div>
                 <div class="col">
                     <img class="mb-4" src="../../resources/img/png/cat_products.png" width="300px">
                     <div>
-                        <a href="../../views/admin/scrud_productos.html"
+                        <a href="../../views/admin/scrud_productos_gatos.html"
                             class="btn btn-red-color btn-lg text-light rounded-5 d-grid gap-2">Gatos</a>
                     </div>
                 </div>
